openshift/StatefulSet_workshop-mariadb.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: workshop-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-mariadb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: workshop-mariadb
    spec:
      containers:
        - name: mariadb
          image: image-registry.openshift-image-registry.svc:5000/brz-ws-paas/mariadb-103-centos7:latest
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: workshop-mariadb
              mountPath: /var/lib/mysql
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  volumeClaimTemplates:
    - metadata:
        name: workshop-mariadb
        labels:
          app: mariadb
          cp.cna.at/instance: workshop
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: fc-block-ldisk-prz-delete
        volumeMode: Filesystem
        resources:
          requests:
            storage: 200Mi
