openshift/Service_workshop-wordpress.yaml
kind: Service
apiVersion: v1
metadata:
  name: workshop-wordpress
  labels:
    app: wordpress-container
    pflaeging.net/instance: workshop
    app.kubernetes.io/component: wordpress
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/part-of: workshop-wordpress
spec:
  ports:
    - name: http-alternate
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: workshop-wordpress
  type: ClusterIP
  sessionAffinity: None
